# apparatus-system-harness

./: .dockerignore  .env.example  .gitignore  =0.3.12  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  MANIFEST.md  PORTFOLIO_ANALYSIS.md  README.md  SECURITY.md  WADELABS_API.py  WADELABS_MANIFESTO.md  WADELABS_PROFILE.md  __init__.py  docker-compose.yml  integration_test.py  portfolio_demo.py  pyproject.toml  requirements.txt  test_output.txt
.github/workflows/: linkedin-architectural-update.yml  publish-images.yml  release.yml  tests.yml  wadelabs-rd-summary.yml
docs/: DECISIONS.md  README.md  architecture.md  deployment.md  layers.md  local-quickstart.md  manifest-schema.md
examples/hello-world/: README.md  demo.py  sample-manifest.yaml
findings/: README.md
legacy_v1/: .dockerignore  Dockerfile  MANIFEST.md  README.md  docker-compose.yml  docker-entrypoint.sh  orchestrate.py  requirements.txt
legacy_v1/manifests/: quickstart.yaml
legacy_v1/src/apparatus/: assay.py  engine.py
manifests/: quickstart.yaml
schemas/: inquiry-manifest-v1.schema.json
scripts/: generate-schema.py
src/: __init__.py  actuator.py  orchestrator.py  triage.py  trigger.py
src/inquisitor/: __init__.py
src/inquisitor/analysis/: __init__.py
src/inquisitor/api/: server.py
src/inquisitor/conductor/: raft_node.py
tests/: test_coordination.py
tests/integration/: test_full_assay.py
tests/unit/: test_execution_compiler.py  test_manifest_parser.py  test_manifest_validator.py  test_raft_conductor.py  test_rbac_gating.py  test_sandboxing.py  test_synthesis_engine.py
(+46 files in other folders)
